fix the menu overflow

--- a/src/components/combobox/combobox.css
+++ b/src/components/combobox/combobox.css
@@ -1,5 +1,6 @@
 .annotator-combobox {
     user-select: none;
+    position: relative;
 }
 
 .annotator-combobox__input {
